# ananas-ledger

./: AUTHORS  ChangeLog  Makefile.in  README  TODO  configure  configure.in  makemake
doc/: diplom.doc  politic-eckonomic.doc
src/: Makefile.am  Makefile.in  readme
src/apache_module/: Makefile.am  Makefile.in  apache_gsoap.h  calcclnt.cpp  calculator.cpp  calculator.h  testit
src/mod_gsoap/: Makefile.am  Makefile.in  apache_gsoap.h  mod_gsoap.c
src/sugar_module/: INSTALL-koi8-ru  readme
src/sugar_module/Ledger/: AddContact.html  AddContact.php  AnanasContacts.php  DocJournal.php  Documents.html  Documents.php  Forms.php  Menu.php  Modules.html  SelectContact.html  SelectContact.php  index.php  recreate.php  update.php
src/sugar_module/Ledger/language/: en_us.lang.php
